# korean-spacing

./: .env.example  .gitignore  CLAUDE.md  README.md  korean_spacing_tool_plan.md  pyproject.toml  requirements.txt  띄어쓰기_조항_정리.json  맞춤법_형태_규정.json
core/: __init__.py  adnoun.py  affix.py  aux_lexicon.json  caret_rule.py  compound.py  conjugation.py  connective.py  homograph.py  honorific.py  local_index.py  normalize.py  numeral.py  particle.py  pos_mapper.py  pos_table.py  presenter.py  rules_data.json  schema.py  segmenter.py  serialize.py
shell/gui/: app.py
shell/mcp/: server.py
shell/webui/: app.py  index.html
tests/: test_adnoun_particle.py  test_affix.py  test_build.py  test_compound.py  test_conjugation.py  test_connective.py  test_homograph.py  test_numeral.py  test_segmentation.py
