[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-spacing"
version = "0.2.3"
description = "Offline Korean spacing lookup tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ijson>=3.3.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pyinstaller>=6.0.0",
]
# MCP(stdio) 셸: python -m shell.mcp.server
mcp = [
  "mcp>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
